[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=7.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "botstrap"
description = "An easy-to-use utility toolbelt for Discord bots written in Python."
requires-python = ">=3.10"
authors = [
    { name = "Nuztalgia" },
    { email = "nuztalgia@gmail.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["bot", "cli", "discord", "encryption", "security", "token", "utilities"]
dynamic = ["dependencies", "urls", "version"]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
extend_skip = ["examples"]

[tool.pydocstyle]
convention = "google"
add-ignore = "D417"
match = "botstrap/[^_].*\\.py"

[tool.setuptools]
packages = ["botstrap", "botstrap.internal"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
