[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm[toml]>=7.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "botstrap"
description = "An easy-to-use utility toolbelt for Discord bots written in Python."
requires-python = ">=3.10"
authors = [
    { name = "Nuztalgia" },
    { email = "nuztalgia@gmail.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["bot", "cli", "discord", "encryption", "security", "token", "utilities"]
dynamic = ["dependencies", "optional-dependencies", "urls", "version"]

[project.scripts]
botstrap = "botstrap.cli:main"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
extend_skip = ["examples"]

[tool.pydocstyle]
convention = "google"
add-ignore = "D417"
match = "botstrap/.*\\.py"

[tool.pytest.ini_options]
addopts = [
    "--cov",
    "--cov-config=tests/.coverage.ini",
    "--doctest-modules",
    "--ignore=botstrap/colors.py",
    "--ignore=botstrap/internal/clisession.py",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]
required_plugins = ["pytest-cov", "pytest-repeat"]
testpaths = ["botstrap", "tests"]

[tool.setuptools]
packages = ["botstrap", "botstrap.cli", "botstrap.internal"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.tox]
legacy_tox_ini = """
[testenv]
commands = {envpython} -m pytest --count=5 {posargs}
extras = tests

[testenv:docs]
commands = mkdocs build --strict {posargs}
deps = -rdocs/requirements.txt
skip_install = true
"""
